--- a/src/main/java/com/project/application/App.form
+++ b/src/main/java/com/project/application/App.form
@@ -192,7 +192,7 @@
           </component>
         </children>
       </grid>
-      <grid id="aa3dd" binding="userTablePanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="aa3dd" binding="userTablePanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <card name="userTableCard"/>
@@ -237,6 +237,14 @@
             </constraints>
             <properties>
               <text value="Search"/>
+            </properties>
+          </component>
+          <component id="15373" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Delete"/>
             </properties>
           </component>
         </children>
